Ajout méthode récupération Worksite + page d'affichage des sites de travail

--- a/src/main/resources/com/hogwartscompany/softclient/header.fxml
+++ b/src/main/resources/com/hogwartscompany/softclient/header.fxml
@@ -64,9 +64,9 @@
             </ImageView>
          </graphic>
       </Button>
-      <Button layoutX="1120.0" layoutY="12.0" mnemonicParsing="false" style="-fx-background-color: #80D2F2; -fx-background-radius: 15;">
+      <Button fx:id="buttonDisconnect" layoutX="1120.0" layoutY="12.0" onAction="#disconnectAndClose" mnemonicParsing="false" style="-fx-background-color: #80D2F2; -fx-background-radius: 15;">
          <graphic>
-            <ImageView fx:id="buttonDisconnect" fitHeight="50.0" fitWidth="50.0" onDragDetected="#disconnectAndClose" pickOnBounds="true">
+            <ImageView fitHeight="50.0" fitWidth="50.0"  pickOnBounds="true">
                <image>
                   <Image url="@../../../assets/icons/disconnect.png" />
                </image>
