--- a/src/main/resources/com/hogwartscompany/softclient/addWorksite.fxml
+++ b/src/main/resources/com/hogwartscompany/softclient/addWorksite.fxml
@@ -1,48 +1,104 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<VBox xmlns="http://javafx.com/javafx"
-      xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.hogwartscompany.softclient.model.AddWorksiteController"
-      spacing="10" alignment="center">
-
-    <Label text="Ajouter un nouveau Worksite" style="-fx-font-size: 16px;"/>
-
-    <HBox spacing="5" alignment="center">
-        <Label text="ID" />
-        <TextField fx:id="idField" />
-    </HBox>
-
-    <HBox spacing="5" alignment="center">
-        <Label text="Nom :" />
-        <TextField fx:id="nameField" />
-    </HBox>
-
-    <HBox spacing="5" alignment="center">
-        <Label text="Type :" />
-        <TextField fx:id="typeField" />
-    </HBox>
-
-    <HBox spacing="5" alignment="center">
-        <Label text="Téléphone :" />
-        <TextField fx:id="phoneField" />
-    </HBox>
-
-    <HBox spacing="5" alignment="center">
-        <Label text="Email :" />
-        <TextField fx:id="emailField" />
-    </HBox>
-
-    <HBox spacing="5" alignment="center">
-        <Label text="ID Adresse :" />
-        <TextField fx:id="idAddressField" />
-    </HBox>
-
-    <Button text="Ajouter" onAction="#addWorksite" />
-
-</VBox>
+<AnchorPane prefHeight="671.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.hogwartscompany.softclient.AddWorksiteController">
+    <children>
+        <ImageView fitHeight="700.0" fitWidth="800.0" opacity="0.3" pickOnBounds="true">
+            <image>
+                <Image url="@../../../assets/image/wallpaper.jpg" />
+            </image>
+        </ImageView>
+        <Label alignment="CENTER" contentDisplay="CENTER" layoutX="126.0" layoutY="34.0" prefHeight="53.0" prefWidth="549.0" style="-fx-background-color: #80D2F2; -fx-background-radius: 25;" text="Détails site de travail" textAlignment="CENTER">
+            <font>
+                <Font name="Lucida Sans Regular" size="26.0" />
+            </font>
+        </Label>
+        <Label alignment="CENTER" contentDisplay="CENTER" layoutX="26.0" layoutY="153.0" prefHeight="35.0" prefWidth="120.0" style="-fx-background-color: #F2F2F2; -fx-background-radius: 15;" text="Nom">
+            <font>
+                <Font size="16.0" />
+            </font>
+        </Label>
+        <TextField fx:id="nameField" layoutX="152.0" layoutY="153.0" prefHeight="35.0" prefWidth="210.0" />
+        <Label alignment="CENTER" contentDisplay="CENTER" layoutX="370.0" layoutY="153.0" prefHeight="35.0" prefWidth="120.0" style="-fx-background-color: #F2F2F2; -fx-background-radius: 15;" text="Type">
+            <font>
+                <Font size="16.0" />
+            </font>
+        </Label>
+        <TextField fx:id="typeField" layoutX="497.0" layoutY="153.0" prefHeight="35.0" prefWidth="210.0" />
+        <Label alignment="CENTER" contentDisplay="CENTER" layoutX="26.0" layoutY="209.0" prefHeight="35.0" prefWidth="120.0" style="-fx-background-color: #F2F2F2; -fx-background-radius: 15;" text="Téléphone">
+            <font>
+                <Font size="16.0" />
+            </font>
+        </Label>
+        <TextField fx:id="phoneField" layoutX="152.0" layoutY="209.0" prefHeight="35.0" prefWidth="345.0" />
+        <Label alignment="CENTER" contentDisplay="CENTER" layoutX="26.0" layoutY="266.0" prefHeight="35.0" prefWidth="120.0" style="-fx-background-color: #F2F2F2; -fx-background-radius: 15;" text="Email">
+            <font>
+                <Font size="16.0" />
+            </font>
+        </Label>
+        <TextField fx:id="emailField" layoutX="152.0" layoutY="265.0" prefHeight="35.0" prefWidth="345.0" />
+        <Label alignment="CENTER" contentDisplay="CENTER" layoutX="26.0" layoutY="350.0" prefHeight="35.0" prefWidth="120.0" style="-fx-background-color: #F2F2F2; -fx-background-radius: 15;" text="Adresse">
+            <font>
+                <Font size="16.0" />
+            </font>
+        </Label>
+        <TextField fx:id="idAddressField" layoutX="152.0" layoutY="350.0" prefHeight="35.0" prefWidth="102.0" />
+        <Label alignment="CENTER" contentDisplay="CENTER" layoutX="26.0" layoutY="409.0" prefHeight="35.0" prefWidth="120.0" style="-fx-background-color: #F2F2F2; -fx-background-radius: 15;" text="Etage">
+            <font>
+                <Font size="16.0" />
+            </font>
+        </Label>
+        <TextField layoutX="152.0" layoutY="409.0" prefHeight="35.0" prefWidth="210.0" />
+        <Label alignment="CENTER" contentDisplay="CENTER" layoutX="370.0" layoutY="409.0" prefHeight="35.0" prefWidth="120.0" style="-fx-background-color: #F2F2F2; -fx-background-radius: 15;" text="Bâtiment">
+            <font>
+                <Font size="16.0" />
+            </font>
+        </Label>
+        <TextField layoutX="497.0" layoutY="409.0" prefHeight="35.0" prefWidth="210.0" />
+        <Label alignment="CENTER" contentDisplay="CENTER" layoutX="26.0" layoutY="467.0" prefHeight="35.0" prefWidth="120.0" style="-fx-background-color: #F2F2F2; -fx-background-radius: 15;" text="Adresse">
+            <font>
+                <Font size="16.0" />
+            </font>
+        </Label>
+        <TextField layoutX="152.0" layoutY="467.0" prefHeight="35.0" prefWidth="556.0" />
+        <Label alignment="CENTER" contentDisplay="CENTER" layoutX="26.0" layoutY="525.0" prefHeight="35.0" prefWidth="120.0" style="-fx-background-color: #F2F2F2; -fx-background-radius: 15;" text="Complement">
+            <font>
+                <Font size="16.0" />
+            </font>
+        </Label>
+        <TextField layoutX="152.0" layoutY="525.0" prefHeight="35.0" prefWidth="556.0" />
+        <Label alignment="CENTER" contentDisplay="CENTER" layoutX="26.0" layoutY="577.0" prefHeight="35.0" prefWidth="120.0" style="-fx-background-color: #F2F2F2; -fx-background-radius: 15;" text="Département">
+            <font>
+                <Font size="16.0" />
+            </font>
+        </Label>
+        <TextField layoutX="152.0" layoutY="577.0" prefHeight="35.0" prefWidth="210.0" />
+        <Label alignment="CENTER" contentDisplay="CENTER" layoutX="370.0" layoutY="577.0" prefHeight="35.0" prefWidth="120.0" style="-fx-background-color: #F2F2F2; -fx-background-radius: 15;" text="Ville">
+            <font>
+                <Font size="16.0" />
+            </font>
+        </Label>
+        <TextField layoutX="497.0" layoutY="577.0" prefHeight="35.0" prefWidth="210.0" />
+        <Button fx:id="buttonClosePopUp" layoutX="708.0" layoutY="39.0" mnemonicParsing="false" onAction="#closePopUp" prefHeight="43.0" prefWidth="51.0" style="-fx-background-color: #14A1D9; -fx-background-radius: 10;">
+         <graphic>
+                <ImageView fitHeight="35.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
+                    <image>
+                        <Image url="@../../../assets/icons/quit.png" />
+                    </image>
+                </ImageView>
+         </graphic>
+        </Button>
+      <Button fx:id="buttonAddWorksite" layoutX="310.0" layoutY="632.0" mnemonicParsing="false" onAction="#addWorksite" prefHeight="43.0" prefWidth="180.0" style="-fx-background-color: #14A1D9; -fx-background-radius: 10;" text="Ajouter le site" textFill="WHITE">
+         <font>
+            <Font name="Lucida Sans Regular" size="16.0" />
+         </font>
+      </Button>
+    </children>
+</AnchorPane>
