--- a/src/main/resources/com/hogwartscompany/softclient/connexion.fxml
+++ b/src/main/resources/com/hogwartscompany/softclient/connexion.fxml
@@ -2,16 +2,13 @@
 
 <?import javafx.geometry.Rectangle2D?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
-<?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.hogwartscompany.softclient.ConnexionController">
+<AnchorPane onKeyPressed="#handleKeyPressed" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.hogwartscompany.softclient.ConnexionController">
    <children>
       <ImageView fitHeight="800.0" fitWidth="1200.0" layoutX="67.0" layoutY="11.0" opacity="0.5" pickOnBounds="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <image>
@@ -20,36 +17,26 @@
          <viewport>
             <Rectangle2D />
          </viewport></ImageView>
-      <AnchorPane layoutX="84.0" layoutY="144.0" opacity="0.9" prefHeight="512.0" prefWidth="391.0" style="-fx-background-color: white; -fx-background-radius: 35;">
+      <AnchorPane layoutX="178.0" layoutY="198.0" opacity="0.9" prefHeight="404.0" prefWidth="844.0" style="-fx-background-color: white; -fx-background-radius: 35;">
          <children>
-            <ImageView fitHeight="161.0" fitWidth="311.0" layoutX="50.0" layoutY="36.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="161.0" fitWidth="311.0" layoutX="276.0" layoutY="33.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../../../assets/image/logo.png" />
                </image>
             </ImageView>
-            <Text layoutX="20.0" layoutY="234.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Annuaire d'entreprise" textAlignment="CENTER" wrappingWidth="352.0">
+            <Text layoutX="246.0" layoutY="244.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Annuaire d'entreprise" textAlignment="CENTER" wrappingWidth="352.0">
                <font>
-                  <Font name="Calibri" size="36.0" />
+                  <Font name="Corbel Light" size="36.0" />
                </font>
             </Text>
-            <CheckBox layoutX="25.0" layoutY="405.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="342.0" text="Connexion en administrateur" textFill="#00000081">
+            <Text fill="#1f8aa8" layoutX="1.0" layoutY="296.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Pour vous connecter en administrateur : CTRL + TAB" textAlignment="CENTER" wrappingWidth="843.0">
                <font>
-                  <Font name="Calibri" size="16.0" />
+                  <Font name="Corbel Light" size="24.0" />
                </font>
-            </CheckBox>
-            <PasswordField alignment="CENTER" layoutX="25.0" layoutY="322.0" prefHeight="62.0" prefWidth="342.0" promptText="Mot de passe" style="-fx-border-radius: 15;">
+            </Text>
+            <Button fx:id="buttonGoToHomePage" alignment="CENTER" contentDisplay="CENTER" layoutX="330.0" layoutY="326.0" mnemonicParsing="false" onAction="#goToHomePage" prefHeight="57.0" prefWidth="184.0" style="-fx-background-radius: 20;" text="Se connecter" textFill="WHITE">
                <font>
-                  <Font name="Calibri Light" size="16.0" />
-               </font>
-            </PasswordField>
-            <TextField alignment="CENTER" layoutX="25.0" layoutY="261.0" prefHeight="62.0" prefWidth="342.0" promptText="Nom d'utilisateur" style="-fx-border-radius: 15;">
-               <font>
-                  <Font name="Calibri" size="16.0" />
-               </font>
-            </TextField>
-            <Button fx:id="buttonGoToHomePage" contentDisplay="CENTER" defaultButton="true" layoutX="110.0" layoutY="455.0" mnemonicParsing="false" onAction="#goToHomePage" prefHeight="43.0" prefWidth="172.0" style="-fx-background-radius: 20;" text="Se connecter" textAlignment="CENTER" textOverrun="CENTER_ELLIPSIS">
-               <font>
-                  <Font name="Calibri" size="20.0" />
+                  <Font name="Corbel Light" size="24.0" />
                </font>
             </Button>
          </children>
