--- a/src/main/resources/com/hogwartscompany/softclient/detailsWorksite.fxml
+++ b/src/main/resources/com/hogwartscompany/softclient/detailsWorksite.fxml
@@ -44,7 +44,7 @@
          </font>
       </Label>
       <TextField fx:id="phoneWorksite" layoutX="152.0" layoutY="209.0" prefHeight="35.0" prefWidth="345.0" />
-      <TextField layoutX="152.0" layoutY="467.0" prefHeight="35.0" prefWidth="556.0" />
+      <TextField fx:id="lineAddress1" layoutX="152.0" layoutY="467.0" prefHeight="35.0" prefWidth="556.0" />
       <Label alignment="CENTER" contentDisplay="CENTER" layoutX="26.0" layoutY="266.0" prefHeight="35.0" prefWidth="120.0" style="-fx-background-color: #F2F2F2; -fx-background-radius: 15;" text="Email">
          <font>
             <Font size="16.0" />
@@ -62,25 +62,25 @@
             <Font size="16.0" />
          </font>
       </Label>
-      <TextField layoutX="152.0" layoutY="409.0" prefHeight="35.0" prefWidth="210.0" />
+      <TextField fx:id="buildingFloor" layoutX="152.0" layoutY="409.0" prefHeight="35.0" prefWidth="210.0" />
       <Label alignment="CENTER" contentDisplay="CENTER" layoutX="370.0" layoutY="409.0" prefHeight="35.0" prefWidth="120.0" style="-fx-background-color: #F2F2F2; -fx-background-radius: 15;" text="Bâtiment">
          <font>
             <Font size="16.0" />
          </font>
       </Label>
-      <TextField layoutX="497.0" layoutY="409.0" prefHeight="35.0" prefWidth="210.0" />
+      <TextField fx:id="buildingName" layoutX="497.0" layoutY="409.0" prefHeight="35.0" prefWidth="210.0" />
       <Label alignment="CENTER" contentDisplay="CENTER" layoutX="26.0" layoutY="467.0" prefHeight="35.0" prefWidth="120.0" style="-fx-background-color: #F2F2F2; -fx-background-radius: 15;" text="Adresse">
          <font>
             <Font size="16.0" />
          </font>
       </Label>
-      <TextField layoutX="152.0" layoutY="525.0" prefHeight="35.0" prefWidth="556.0" />
+      <TextField fx:id="lineAddress2" layoutX="152.0" layoutY="525.0" prefHeight="35.0" prefWidth="556.0" />
       <Label alignment="CENTER" contentDisplay="CENTER" layoutX="26.0" layoutY="525.0" prefHeight="35.0" prefWidth="120.0" style="-fx-background-color: #F2F2F2; -fx-background-radius: 15;" text="Complement">
          <font>
             <Font size="16.0" />
          </font>
       </Label>
-      <TextField layoutX="152.0" layoutY="577.0" prefHeight="35.0" prefWidth="210.0" />
+      <TextField fx:id="departmentCode" layoutX="152.0" layoutY="577.0" prefHeight="35.0" prefWidth="210.0" />
       <Label alignment="CENTER" contentDisplay="CENTER" layoutX="26.0" layoutY="577.0" prefHeight="35.0" prefWidth="120.0" style="-fx-background-color: #F2F2F2; -fx-background-radius: 15;" text="Département">
          <font>
             <Font size="16.0" />
@@ -91,7 +91,7 @@
             <Font size="16.0" />
          </font>
       </Label>
-      <TextField layoutX="497.0" layoutY="577.0" prefHeight="35.0" prefWidth="210.0" />
+      <TextField fx:id="cityName" layoutX="497.0" layoutY="577.0" prefHeight="35.0" prefWidth="210.0" />
       <Button fx:id="buttonUpdateWorksite" alignment="CENTER" contentDisplay="CENTER" layoutX="197.0" layoutY="631.0" mnemonicParsing="false" onAction="#updateWorksite" prefHeight="43.0" prefWidth="120.0" style="-fx-background-color: #14A1D9; -fx-background-radius: 15;" text="Modifier le site" textFill="WHITE">
          <font>
             <Font size="14.0" />
