Ajout du détail adresse fonctionnel - Ajout de la méthode recherche pour Worksite fonctionnelle

--- a/src/main/resources/com/hogwartscompany/softclient/detailsWorksite.fxml
+++ b/src/main/resources/com/hogwartscompany/softclient/detailsWorksite.fxml
@@ -111,5 +111,6 @@
             </ImageView>
          </graphic>
       </Button>
+      <Button fx:id="buttonDisplayAddress" layoutX="265.0" layoutY="355.0" mnemonicParsing="false" onAction="#displayAddress" text="Adresses" />
    </children>
 </AnchorPane>
