--- a/src/main/resources/com/hogwartscompany/softclient/header.fxml
+++ b/src/main/resources/com/hogwartscompany/softclient/header.fxml
@@ -1,22 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.Blend?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="0.0" prefWidth="1200.0" style="-fx-background-color: #14A1D9;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.hogwartscompany.softclient.HeaderController">
+<AnchorPane nodeOrientation="LEFT_TO_RIGHT" prefHeight="0.0" prefWidth="1200.0" style="-fx-background-color: #14A1D9; -fx-border-radius: 15;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.hogwartscompany.softclient.HeaderController">
    <children>
       <ImageView fitHeight="81.0" fitWidth="191.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../assets/image/logo.png" />
          </image>
       </ImageView>
-      <Button fx:id="buttonGoToWorksite" alignment="CENTER" contentDisplay="RIGHT" layoutX="153.0" layoutY="10.0" mnemonicParsing="false" nodeOrientation="LEFT_TO_RIGHT" onAction="#goToWorksite" prefHeight="62.0" prefWidth="196.0" style="-fx-background-radius: 25; -fx-background-color: #80D2F2;" text="Sites de travail" textFill="WHITE">
+      <Button fx:id="buttonGoToWorksite" alignment="CENTER" contentDisplay="RIGHT" layoutX="165.0" layoutY="17.0" mnemonicParsing="false" nodeOrientation="LEFT_TO_RIGHT" onAction="#goToWorksite" prefHeight="49.0" prefWidth="196.0" style="-fx-background-radius: 25; -fx-background-color: #80D2F2;" text="Sites de travail" textFill="WHITE">
          <graphic>
-            <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="35.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../../../assets/icons/worksite.png" />
                </image>
@@ -26,9 +27,9 @@
             <Font size="16.0" />
          </font>
       </Button>
-      <Button fx:id="buttonGoToService" alignment="CENTER" contentDisplay="RIGHT" layoutX="358.0" layoutY="10.0" mnemonicParsing="false" nodeOrientation="LEFT_TO_RIGHT" onAction="#goToService" prefHeight="62.0" prefWidth="232.0" style="-fx-background-radius: 25; -fx-background-color: #80D2F2;" text="Tous nos services" textFill="WHITE">
+      <Button fx:id="buttonGoToService" alignment="CENTER" contentDisplay="RIGHT" layoutX="404.0" layoutY="17.0" mnemonicParsing="false" nodeOrientation="LEFT_TO_RIGHT" onAction="#goToService" prefHeight="49.0" prefWidth="196.0" style="-fx-background-radius: 25; -fx-background-color: #80D2F2;" text="Tous nos services" textFill="WHITE">
          <graphic>
-            <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="35.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../../../assets/icons/service.png" />
                </image>
@@ -38,9 +39,9 @@
             <Font name="Lucida Sans Regular" size="16.0" />
          </font>
       </Button>
-      <Button fx:id="buttonGoToEmployee" alignment="CENTER" contentDisplay="RIGHT" layoutX="600.0" layoutY="10.0" mnemonicParsing="false" nodeOrientation="LEFT_TO_RIGHT" onAction="#goToEmployee" prefHeight="62.0" prefWidth="196.0" style="-fx-background-radius: 25; -fx-background-color: #80D2F2;" text="Nos employés" textFill="WHITE">
+      <Button fx:id="buttonGoToEmployee" alignment="CENTER" contentDisplay="RIGHT" layoutX="652.0" layoutY="17.0" mnemonicParsing="false" nodeOrientation="LEFT_TO_RIGHT" onAction="#goToEmployee" prefHeight="49.0" prefWidth="196.0" style="-fx-background-radius: 25; -fx-background-color: #80D2F2;" text="Nos employés" textFill="WHITE">
          <graphic>
-            <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="50.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../../../assets/icons/employees.png" />
                </image>
@@ -50,23 +51,21 @@
             <Font name="Lucida Sans Regular" size="16.0" />
          </font>
       </Button>
-      <TextField layoutX="812.0" layoutY="28.0" prefHeight="25.0" prefWidth="241.0" promptText="Barre de recherche...">
-         <font>
-            <Font name="Lucida Sans Regular" size="12.0" />
-         </font>
-      </TextField>
-      <Button fx:id="buttonSearchResults" layoutX="1059.0" layoutY="24.0" mnemonicParsing="false" onAction="#searchResults" style="-fx-background-color: #80D2F2; -fx-background-radius: 25;">
+      <Button fx:id="buttonSearchResults" layoutX="883.0" layoutY="17.0" mnemonicParsing="false" onAction="#searchResults" prefHeight="49.0" prefWidth="209.0" style="-fx-background-color: #80D2F2; -fx-background-radius: 25;" text="Faire une recherche" textFill="WHITE">
          <graphic>
-            <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true">
+            <ImageView fitHeight="35.0" fitWidth="35.0" pickOnBounds="true">
                <image>
                   <Image url="@../../../assets/icons/search.png" />
                </image>
             </ImageView>
          </graphic>
+         <font>
+            <Font size="16.0" />
+         </font>
       </Button>
-      <Button fx:id="buttonDisconnect" layoutX="1120.0" layoutY="12.0" onAction="#disconnectAndClose" mnemonicParsing="false" style="-fx-background-color: #80D2F2; -fx-background-radius: 15;">
+      <Button fx:id="buttonDisconnect" layoutX="1120.0" layoutY="20.0" mnemonicParsing="false" onAction="#disconnectAndClose" style="-fx-background-color: #80D2F2; -fx-background-radius: 15;">
          <graphic>
-            <ImageView fitHeight="50.0" fitWidth="50.0"  pickOnBounds="true">
+            <ImageView fitHeight="35.0" fitWidth="35.0" pickOnBounds="true">
                <image>
                   <Image url="@../../../assets/icons/disconnect.png" />
                </image>
@@ -74,4 +73,10 @@
          </graphic>
       </Button>
    </children>
+   <effect>
+      <Blend />
+   </effect>
+   <cursor>
+      <Cursor fx:constant="DEFAULT" />
+   </cursor>
 </AnchorPane>
