--- a/src/main/resources/com/hogwartscompany/softclient/searchResults.fxml
+++ b/src/main/resources/com/hogwartscompany/softclient/searchResults.fxml
@@ -1,25 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.hogwartscompany.softclient.SearchController">
-   <children>
-      <TabPane layoutY="159.0" prefHeight="719.0" prefWidth="1200.0" tabClosingPolicy="UNAVAILABLE">
+<AnchorPane prefHeight="800.0" prefWidth="1200.0" style="-fx-background-color: #14A1D9;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.hogwartscompany.softclient.SearchController">
+    <fx:include fx:id="header" source="header.fxml" />
+    <children>
+      <TabPane fx:id="resultsTable" layoutY="186.0" prefHeight="616.0" prefWidth="1200.0" tabClosingPolicy="UNAVAILABLE">
         <tabs>
           <Tab text="Sites de travail">
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <TableView prefHeight="685.0" prefWidth="1206.0">
+                        <TableView fx:id="worksiteTable" prefHeight="722.0" prefWidth="1206.0" style="-fx-background-image: url=&quot;@../../../assets/image/wallpaper.jpg&quot;;">
                           <columns>
-                            <TableColumn prefWidth="75.0" text="C1" />
-                            <TableColumn prefWidth="75.0" text="C2" />
+                            <TableColumn fx:id="idWorksite" prefWidth="75.0" text="N° de site" />
+                            <TableColumn fx:id="nameWorksite" prefWidth="75.0" text="Nom du site" />
+                              <TableColumn fx:id="typeWorksite" prefWidth="75.0" text="Type de site" />
+                              <TableColumn fx:id="phoneWorksite" prefWidth="75.0" text="Téléphone" />
+                              <TableColumn fx:id="emailWorksite" prefWidth="75.0" text="Email" />
+                              <TableColumn fx:id="addressWorksite" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="-1.0" text="Adresse" visible="false" />
                           </columns>
+                           <columnResizePolicy>
+                              <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                           </columnResizePolicy>
                         </TableView>
                      </children>
                   </AnchorPane>
@@ -55,5 +65,13 @@
             </Tab>
         </tabs>
       </TabPane>
+      <Button fx:id="buttonSearch" alignment="CENTER" layoutX="359.0" layoutY="120.0" mnemonicParsing="false" onAction="#makeAResearch" prefHeight="49.0" prefWidth="483.0" style="-fx-background-color: #1F456E;" text="Recherche" textAlignment="CENTER" textFill="WHITE" textOverrun="CENTER_ELLIPSIS">
+         <graphic>
+            <TextField fx:id="searchField" prefHeight="25.0" prefWidth="372.0" promptText="Chercher un site, un service, un employé... " />
+         </graphic>
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
