--- a/src/main/resources/com/hogwartscompany/softclient/worksite.fxml
+++ b/src/main/resources/com/hogwartscompany/softclient/worksite.fxml
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.hogwartscompany.softclient.WorksiteController">
+<AnchorPane prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.hogwartscompany.softclient.WorksiteController">
     <children>
         <fx:include fx:id="header" source="header.fxml" />
         <SplitPane dividerPositions="0.15202231520223153" layoutY="79.0" orientation="VERTICAL" prefHeight="719.0" prefWidth="1200.0">
             <items>
-              <AnchorPane fx:id="menuWorksite" minHeight="0.0" minWidth="0.0" prefHeight="73.0" prefWidth="1198.0" style="-fx-background-color: #14A1D9;">
+              <AnchorPane fx:id="menuWorksite" minHeight="0.0" minWidth="0.0" prefHeight="73.0" prefWidth="1200.0" style="-fx-background-color: #14A1D9;">
                    <children>
                       <Button fx:id="buttonAddWorksite" layoutX="968.0" layoutY="33.0" mnemonicParsing="false" onAction="#addWorksite" prefHeight="40.0" prefWidth="200.0" style="-fx-background-color: #80D2F2; -fx-background-radius: 25;" text="Ajouter un site">
                          <font>
@@ -27,12 +31,12 @@
                    <children>
                       <TableView fx:id="worksiteTable" prefHeight="605.0" prefWidth="1198.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                         <columns>
-                            <TableColumn fx:id="idWorksite" prefWidth="83.0" text="ID" />
+                            <TableColumn fx:id="idWorksite" prefWidth="83.0" text="N° de site" />
                             <TableColumn fx:id="nameWorksite" prefWidth="83.0" text="Nom du site" />
                             <TableColumn fx:id="typeWorksite" prefWidth="67.0" text="Type de site" />
                             <TableColumn fx:id="phoneWorksite" prefWidth="117.0" text="Téléphone" />
                             <TableColumn fx:id="emailWorksite" prefWidth="95.0" text="Email" />
-                            <TableColumn fx:id="addressWorksite" prefWidth="153.0" text="Adresse" />
+                            <TableColumn fx:id="addressWorksite" prefWidth="153.0" text="Adresse" visible="false" />
                         </columns>
                          <columnResizePolicy>
                             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
