--- a/src/main/resources/com/hogwartscompany/softclient/service.fxml
+++ b/src/main/resources/com/hogwartscompany/softclient/service.fxml
@@ -1,14 +1,53 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.hogwartscompany.softclient.Service"
-            prefHeight="400.0" prefWidth="600.0">
+<AnchorPane prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.hogwartscompany.softclient.ServiceSiteController">
+    <children>
+        <fx:include fx:id="header" source="header.fxml" />
+        <SplitPane dividerPositions="0.15202231520223153" layoutY="79.0" orientation="VERTICAL" prefHeight="719.0" prefWidth="1200.0">
+            <items>
+              <AnchorPane fx:id="menuServiceSite" minHeight="0.0" minWidth="0.0" prefHeight="73.0" prefWidth="1200.0" style="-fx-background-color: #14A1D9;">
+                   <children>
+                      <Button fx:id="buttonAddServiceSite" layoutX="968.0" layoutY="33.0" mnemonicParsing="false" onAction="#addServiceSite" prefHeight="40.0" prefWidth="200.0" style="-fx-background-color: #80D2F2; -fx-background-radius: 25;" text="Ajouter un service">
+                         <font>
+                            <Font name="Lucida Sans Demibold Italic" size="16.0" />
+                         </font>
+                      </Button>
+                      <Label alignment="CENTER" layoutX="14.0" layoutY="24.0" prefHeight="59.0" prefWidth="329.0" text="Liste des services" textAlignment="CENTER" textFill="WHITE">
+                         <font>
+                            <Font name="Lucida Sans Demibold Italic" size="24.0" />
+                         </font>
+                      </Label>
+                   </children>
+                </AnchorPane>
+              <AnchorPane fx:id="listServiceSite" minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
+                   <children>
+                      <TableView fx:id="serviceSiteTable" prefHeight="605.0" prefWidth="1200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                        <columns>
+                            <TableColumn fx:id="idServiceSite" prefWidth="83.0" text="N° de service" />
+                            <TableColumn fx:id="nameServiceSite" prefWidth="119.0" text="Nom du service" />
+                            <TableColumn fx:id="typeServiceSite" prefWidth="112.0" text="Type service" />
+                            <TableColumn fx:id="phoneServiceSite" prefWidth="141.0" text="Téléphone" />
+                            <TableColumn fx:id="emailServiceSite" prefWidth="436.0" text="Email" />
+                        <TableColumn fx:id="dateCreationServiceSite" prefWidth="117.0" text="Date de création" />
+                        <TableColumn fx:id="addressServiceSite" prefWidth="103.0" text="Adresse" />
+                            <TableColumn fx:id="worksiteServiceSite" prefWidth="87.0" text="Site rattaché" />
+                        </columns>
+                     <columnResizePolicy>
+                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                     </columnResizePolicy>
+                      </TableView>
+                   </children>
+                </AnchorPane>
+            </items>
+          </SplitPane>
+    </children>
 
 </AnchorPane>
