--- a/src/main/resources/com/hogwartscompany/softclient/detailsWorksite.fxml
+++ b/src/main/resources/com/hogwartscompany/softclient/detailsWorksite.fxml
@@ -2,6 +2,9 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -10,7 +13,7 @@
 
 <AnchorPane prefHeight="700.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.hogwartscompany.softclient.DetailsWorksiteController">
    <children>
-      <ImageView fitHeight="700.0" fitWidth="800.0" opacity="0.3" pickOnBounds="true">
+      <ImageView fitHeight="700.0" fitWidth="1200.0" opacity="0.3" pickOnBounds="true">
          <image>
             <Image url="@../../../assets/image/wallpaper.jpg" />
          </image>
@@ -102,7 +105,7 @@
             <Font name="Lucida Sans Regular" size="14.0" />
          </font>
       </Button>
-      <Button fx:id="buttonClosePopUp" layoutX="728.0" layoutY="19.0" mnemonicParsing="false" onAction="#closePopUp" prefHeight="43.0" prefWidth="51.0" style="-fx-background-color: #14A1D9; -fx-background-radius: 10;">
+      <Button fx:id="buttonClosePopUp" layoutX="1113.0" layoutY="19.0" mnemonicParsing="false" onAction="#closePopUp" prefHeight="43.0" prefWidth="51.0" style="-fx-background-color: #14A1D9; -fx-background-radius: 10;">
          <graphic>
             <ImageView fitHeight="35.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -111,6 +114,26 @@
             </ImageView>
          </graphic>
       </Button>
-      <Button fx:id="buttonDisplayAddress" layoutX="265.0" layoutY="355.0" mnemonicParsing="false" onAction="#displayAddress" text="Adresses" />
+      <Button fx:id="buttonDisplayAddress" layoutX="266.0" layoutY="353.0" mnemonicParsing="false" onAction="#displayAddress" style="-fx-background-color: #80D2F2; -fx-background-radius: 15;" text="Voir le détail des adresses">
+         <font>
+            <Font size="14.0" />
+         </font></Button>
+      <Separator layoutX="711.0" layoutY="9.0" orientation="VERTICAL" prefHeight="679.0" prefWidth="18.0" />
+      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="770.0" layoutY="14.0" prefHeight="53.0" prefWidth="326.0" style="-fx-background-color: #80D2F2; -fx-background-radius: 25;" text="Liste des services" textAlignment="CENTER">
+         <font>
+            <Font name="Lucida Sans Regular" size="26.0" />
+         </font>
+      </Label>
+      <TableView fx:id="listServicesOfWorksite" layoutX="745.0" layoutY="98.0" prefHeight="511.0" prefWidth="429.0">
+        <columns>
+            <TableColumn fx:id="idServiceOfWorksite" prefWidth="61.0" text="N°" />
+          <TableColumn fx:id="nameServiceOfWorksite" prefWidth="121.0" text="Nom service" />
+          <TableColumn fx:id="typeServiceOfWorksite" prefWidth="104.0" text="Type service" />
+            <TableColumn fx:id="phoneServiceOfWorksite" prefWidth="104.0" text="Téléphone" />
+        </columns>
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy>
+      </TableView>
    </children>
 </AnchorPane>
